# ormosbot

./: .gitignore  pyproject.toml  ruff.toml  user-config.py
.github/workflows/: scryfallstats.yml
families/: mtg_family.py
src/ormosbot/: __init__.py  cachedlimiter.py  setstatsrendered.py  site.py  update_module_data.py
